--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   },
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "cuid": "^2.1.8",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.5"
