--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js",
-    "dev": "set DEBUG=express:* & nodemon ./src/index.js"
+    "start": "ts-node ./src/index.ts",
+    "dev": "set DEBUG=express:* & nodemon --exec ts-node ./src/index.ts"
   },
   "license": "ISC",
   "dependencies": {
@@ -19,6 +20,15 @@
     "mongodb": "^3.6.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.5"
+    "@types/bcrypt": "^3.0.0",
+    "@types/compression": "^1.7.0",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.31",
+    "@types/node": "^14.14.0",
+    "nodemon": "^2.0.5",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   }
 }
