数据库根据环境变量配置

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 SERVER_PORT = 8090
+
+USERS_DB_URL = mongodb://localhost:27017
+USERS_DB_NAME = react-cms
+USERS_DB_COL_NAME = users
+
+DEPARTMENTS_DB_URL = mongodb://localhost:27017
+DEPARTMENTS_DB_NAME = react-cms
+DEPARTMENTS_DB_COL_NAME = departments
