职位模块之添加逻辑

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ USERS_DB_COL_NAME = users
 DEPARTMENTS_DB_URL = mongodb://localhost:27017
 DEPARTMENTS_DB_NAME = react-cms
 DEPARTMENTS_DB_COL_NAME = departments
+
+POSITIONS_DB_URL = mongodb://localhost:27017
+POSITIONS_DB_NAME = react-cms
+POSITIONS_DB_COL_NAME = positions
